--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,4 +38,10 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.1'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
     kapt "com.android.databinding:compiler:3.1.0"
+    compile 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.34'
+    implementation 'com.squareup.picasso:picasso:2.71828'
+    implementation 'com.android.support:design:27.1.0'
+    compile 'com.squareup.retrofit2:retrofit:2.4.0'
+    compile 'com.squareup.okhttp3:okhttp:3.1.2'
+    compile 'com.lzy.net:okgo:3.0.4'
 }
