--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,4 +44,5 @@ dependencies {
     compile 'com.squareup.retrofit2:retrofit:2.4.0'
     compile 'com.squareup.okhttp3:okhttp:3.1.2'
     compile 'com.lzy.net:okgo:3.0.4'
+    implementation 'com.google.code.gson:gson:2.8.2'
 }
